--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,18 @@
 <resources>
     <string name="app_name">Staylista Admin</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="no_internet">No Internet</string>
+    <string name="image">image</string>
+    <string name="available">Available</string>
+    <string name="lost">Lost</string>
+    <string name="products">Products</string>
+    <string name="inventory">Inventory</string>
+    <string name="copuns">Copuns</string>
+    <string name="search_product_by_name">Search Product by Name</string>
+    <string name="add_product">Add Product</string>
+    <string name="plus">+</string>
+    <string name="product_details">Product Details</string>
+    <string name="price">Price :</string>
+    <string name="updated">updated at :</string>
 </resources>
