--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,58 @@
     <string name="product_details">Product Details</string>
     <string name="price">Price :</string>
     <string name="updated">updated at :</string>
+    <string name="deleted_successfully">Deleted Successfully</string>
+    <string name="somthing_wrong_with_delete">Something went wrong with deletion process please try again</string>
+    <string name="sure_of_delete_product">Are you sure of Deleting this item ?</string>
+    <string name="deleted_cancelled">Delete Cancelled</string>
+    <string name="vendor">vendor :</string>
+    <string name="type">Type :</string>
+    <string name="size">Size :</string>
+    <string name="color">Color :</string>
+    <string name="product_name">Product Name :</string>
+    <string name="images">Images :</string>
+    <string name="white_space" />
+    <string name="quantity">Quantity :</string>
+    <string name="select_size_first">select size first to get quantity</string>
+    <string name="add_products">Add Products</string>
+    <string name="poster">Poster :</string>
+    <string name="enter_the_poster_url">Enter the Poster URL</string>
+    <string name="product">Product</string>
+    <string name="enter_product_name">Enter Product Name</string>
+    <string name="product_type">Product Type :</string>
+    <string name="enter_product_type">Enter Product Type</string>
+    <string name="enter_vendor_name">Enter Vendor Name</string>
+    <string name="description">Description :</string>
+    <string name="enter_product_description">Enter Product Description</string>
+    <string name="product_tags">Product Tags :</string>
+    <string name="enter_product_tags">Enter Product Tags</string>
+    <string name="variant">Variant</string>
+    <string name="enter_product_price">Enter Product Price</string>
+    <string name="enter_Product_Quantity">Enter Product Quantity</string>
+    <string name="next">Next</string>
+    <string name="done">Done</string>
+    <string name="options">Options</string>
+    <string name="enter_product_color">Enter Product Color</string>
+    <string name="enter_product_size">Enter Product Size</string>
+    <string name="price_must_not_be_empty">price must not be empty</string>
+    <string name="quantity_must_not_be_empty">quantity must not be empty</string>
+    <string name="size_must_not_be_empty">size must not be empty</string>
+    <string name="color_must_not_be_empty">color must not be empty</string>
+    <string name="url_must_not_be_empty">url must not be empty</string>
+    <string name="product_name_must_not_be_empty">product name must not be empty</string>
+    <string name="vendor_must_not_be_empty">vendor must not be empty</string>
+    <string name="product_type_must_not_be_empty">product type must not be empty</string>
+    <string name="description_must_not_be_empty">description must not be empty</string>
+    <string name="tags_must_not_be_empty">product tags must not be empty</string>
+    <string name="poster_must_not_be_empty">product poster must not be empty</string>
+    <string name="success">Success</string>
+    <string name="failed_update_data">failed update Data</string>
+    <string name="this_button_is_not_clickable">This Button is not Clickable</string>
+    <string name="login">Login</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="shop_name_wrong">Shop name is wrong</string>
+    <string name="wrong_password">wrong passowrd</string>
+    <string name="empty_password">Password shouldnot be empty</string>
+    <string name="empty_shop_name">ShopName shouldnot be empty</string>
 </resources>
